--- a/index.html
+++ b/index.html
@@ -106,71 +106,47 @@
 
     ];
 
-    const gallery = document.getElementById("gallery");
-    let currentImageIndex = 0;
+   const gallery = document.getElementById("gallery");
+let currentImageIndex = 0;
 
-    // Dynamically add images
-    imageList.forEach((filename, index) => {
-      const photoDiv = document.createElement('div');
-      photoDiv.className = 'photo';
-      photoDiv.innerHTML = `
-        <img src="images/${filename}" alt="${filename}" data-index="${index}">
-        <a href="images/${filename}" download>Download</a>
-      `;
-      gallery.appendChild(photoDiv);
-    });
+// Dynamically add images
+imageList.forEach((filename, index) => {
+  const photoDiv = document.createElement('div');
+  photoDiv.className = 'photo';
+  photoDiv.innerHTML = `
+    <img src="images/${filename}" alt="${filename}" data-index="${index}">
+    <a href="images/${filename}" download>Download</a>
+  `;
+  gallery.appendChild(photoDiv);
+});
 
-    // Lightbox elements
-    const lightbox = document.querySelector('.lightbox');
-    const lightboxImage = document.querySelector('.lightbox img');
-    const closeBtn = document.querySelector('.close');
+// Lightbox elements
+const lightbox = document.querySelector('.lightbox');
+const lightboxImage = document.querySelector('.lightbox img');
+const closeBtn = document.querySelector('.close');
+const prevBtn = document.querySelector('.prev');
+const nextBtn = document.querySelector('.next');
 
-    // Toggle zoom on click inside the lightbox image
+// Toggle zoom on click inside the lightbox image
 lightboxImage.addEventListener('click', (e) => {
   e.stopPropagation(); // Prevent closing lightbox when clicking image
   lightboxImage.classList.toggle('zoomed');
 });
 
+// Add event listeners AFTER adding images
+const thumbnails = document.querySelectorAll('.gallery img');
 
-    // Add event listeners AFTER adding images
-    const thumbnails = document.querySelectorAll('.gallery img');
+thumbnails.forEach(thumbnail => {
+  thumbnail.addEventListener('click', openLightbox);
+});
 
-    function openLightbox(event) {
-      event.preventDefault();
-      currentImageIndex = Number(event.target.dataset.index);
-      updateLightboxImage();
-      lightbox.style.display = 'flex';
-    }
+function openLightbox(event) {
+  event.preventDefault();
+  currentImageIndex = Number(event.target.dataset.index);
+  updateLightboxImage();
+  updateArrows(); // ✅ show/hide arrows
+  lightbox.style.display
 
-    function updateLightboxImage() {
-      lightboxImage.src = `images/${imageList[currentImageIndex]}`;
-    }
-
-    function closeLightbox() {
-      lightbox.style.display = 'none';
-    }
-
-    function changeImage(direction) {
-      currentImageIndex += direction;
-      if (currentImageIndex < 0) {
-        currentImageIndex = imageList.length - 1;
-      } else if (currentImageIndex >= imageList.length) {
-        currentImageIndex = 0;
-      }
-      updateLightboxImage();
-    }
-
-    // Attach click events
-    thumbnails.forEach(thumbnail => {
-      thumbnail.addEventListener('click', openLightbox);
-    });
-
-    // Close lightbox when clicking outside the image or on close button
-    lightbox.addEventListener('click', (e) => {
-      if (e.target === lightbox || e.target === closeBtn) {
-        closeLightbox();
-      }
-    });
 
   </script>
 
