--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>U8 Maroon Lions</title>
+  <title>🦁 U8 Maroon Lions 🏉</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>U8 Maroon Lions</h1>
+  <h1🦁 >U8 Maroon Lions 🏉</h1>
 
 <!-- Add links to other repositories  class="active"   -->
 <ul class="nav-list">
